--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@
 /target/
 /.vscode/
 
-# Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
-# More information here http://doc.crates.io/guide.html#cargotoml-vs-cargolock
-Cargo.lock
-
+# Windows specific debug files. Generated at compile time
 *.pdb
 *.exe
+
+# development
+urls.db
