--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["bdoner <bdoner@user.noreply.github.com>"]
 
 [dependencies]
 rand = "0.3"
-sqlite = "0.23.4"
+rusqlite = "0.11.0"
 time = "0.1.37"
