--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,4 @@ authors = ["bdoner <bdoner@user.noreply.github.com>"]
 [dependencies]
 rand = "0.3"
 rusqlite = "0.11.0"
-time = "0.1.37"
+chrono = "0.3.1"
